# ViGeo

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  benchmark_defs.py  checkpoint_utils.py  dataset_io.py  eval.py  eval_utils.py  main.py  metric_func.py  pyproject.toml  requirements.txt  requirements_refine.txt
configs/depth_completion/: datasets.py  videoldcm_stage1.py  videoldcm_stage2.py
configs/video_depth/: datasets.py  vigeo_stage1_224x224.py  vigeo_stage2_336x336_518x518.py  vigeo_stage3_336x336_518x518_normal.py  vigeo_stage4_336x336_518x518_conf.py
depth_benchmarks/: eval.py  model_registry.py
depth_benchmarks/checkpoints/: README.md
depth_benchmarks/flashdepth/: model.py
depth_benchmarks/vda/: video_depth.py  video_depth_stream.py
docs/: install.md  requirements.txt
normal_benchmarks/: eval.py  inference.py  model_registry.py
normal_benchmarks/checkpoints/: README.md
normal_benchmarks/lotus/: image_utils.py  pipeline.py
normal_benchmarks/stablenormal/: __init__.py  loader.py  pipeline_stablenormal.py  pipeline_yoso_normal.py
preprocess/: depth2normal.py  generate_hammer_normal.py  generate_sintel_normal.py  normal_utils.py
scripts/: eval_depth_benchmarks.sh  eval_normal_benchmarks.sh  eval_vigeo.sh
src/: __init__.py
src/augmentation/: __init__.py  (+6 more)
trainer/: data_dm.py  pl_model.py  sampler.py
utils/: __init__.py  alignment.py  data.py  load_pretrain.py  metric_func.py  mis_match_filter.py  misc.py  refinement.py
videoldcm/: __init__.py  videoldcm.py
vigeo/: __init__.py  camera_head.py  conv_head.py  utils.py  vigeo.py
(+148 files in other folders)
