[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigeo"
version = "0.1.0"
description = "ViGeo visual geometry model package"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.1",
    "einops>=0.7",
    "huggingface-hub>=0.23",
    "numpy>=1.23",
    "pillow>=9.0",
]

[tool.setuptools.packages.find]
include = ["vigeo*", "videoldcm*", "utils*"]
